h2. Changelog

h3. Versión 1.3.5 RC1

* Fixed bug generación de los inits en los modelos.

h3. Versión 1.3.4

* Fixed Bug en la parte de Verificación de Documentación.
* Atributos transient ahora se vuelven a inicializar en el init de la Entidad.
* Fixed Bug actualización semilla expediente.

h3. Versión 1.3.3

* Fixed Bug en algunos permisos de Verificación.

h3. Versión 1.3.2

* Implementación del acceso concurrente al hacer varias operaciones sobre la misma solicitud.
* Fixed Bugs en la Verificación de Documentación.
* Añadido los códigos de Exclusión.
* Página con dos tablas para los códigos de Requerimiento y Exclusión de la aplicación, en Administración.
* Fixed Bug en la generación de la semilla de los identificadores de los expedientes.
* Permitir indicar un destino (target) en los elementos Form del DSL.
* Cambiado el estado de la solicitud a 'enVerificacion' cuando se inicia una verificación.

h3. Versión 1.3.1

* Fixed Bug en la variable de entorno del Commands.py.
* Fixed Bug en los valores del combo de los codigos de requerimiento al saltar un error de validación.
* Estableciendo static al atributo semilla.
* Añadiendo más información de logs en la clasificación de documentos, y el asignarIDAed.

h3. Versión 1.3

* Verificación de documentación añadida (sin permitir finalizarla aún).
* Duplicado email remitente en incidencias.
* Mejoras en la página de incidencias.
* Tamañano máximo de fichero en la property fap.file.maxsize.
* Fixed bug en el path del manual.

h3. Versión 1.2.9

* Fixed Bug al actualizar el Tipo y la Descripción del Documento clasificado en el AED.
* Fixed Bug al enviar Mail en los errores Fatales.
* Se separa en distintos html, la pagina de login.html para su personalización.
* Fixed bug en subir documento.
* Se permite editar la descripción en los registros de entrada.
* Se permite eliminar valores duplicados de los combos.
* En el subir archivo se eliminan los elementos duplicados en el combo.

h3. Versión 1.2.8
