@@ -1,6 +1,6 @@
 # Application dependencies
 
-self: play -> fap 1.3.5RC1
+self: play -> fap 1.3.5RC2
  
 require:
     - play 1.2.4
